Dec 10 2002  2.7.1  Fixed some packet dissection and wep/interesting detection
                     bugs with fuzzy encryption mode
                    Added (broken) WEP decoding.  Right now this is just a 
                     bit-blender, I'm not sure it's going to give you ANYTHING
                     useful and it's not user-controllable yet.
Dec 05 2002  2.7.1  Fixed wsp100 cygwin header
                    Started adding viha support.  VIHA SUPPORT DOES NOT WORK
                     CURRENTLY.
Dec 03 2002  2.7.1  Fixed kismet_monitor and kismet_unmonitor to work with the
                     new source definitions.
Dec 02 2002  2.7.1  Tweaked how frontend handles group naming to be faster
                     and to handle changing SSID's gracefully.
                    Changed configfile parser to allow multiple options of the
                     same type.
                    Revamped source handling again.  Multiple sources are now
                     defined by multiple 'source=' lines in the config, and
                     optionally enabled by name via the 'enablesources=' line.
                    Added filtering of PHY-layer packets from the dump file.
Dec 01 2002  2.7.1  Internal modifications to the frontend power display
                    Tweaked byte count details
                    Updated turbocell code
                    Updated frontend to handle turbocell ssid changes
Nov 30 2002  2.7.1  Fixed kismet_hopper for cisco_cvs
Nov 29 2002  2.7.1  Changed client back to only updating once per second - 
                     massive speed improvements.
                    Fixed handling of adhoc probe/ssids
                    Changed "Lucent Outdoor Router" to "Turbocell"
                    Added more complete turbocell dissection (Turbocell ID,
                     name, and mode extraction)
Nov 28 2002  2.7.1  Happy thanksgiving
                    Fixed tcpserver code for tracking the number of clients