@@ -4,13 +4,18 @@
 # not continually reading --help!
 
 # Version of Kismet config
-version=2.7.1i
+version=2.7.1j
 
 # Name of server (Purely for organiational purposes)
 servername=Kismet
 
 # MAC addresses to filter, comma seperated. 
 #macfilter=DE:AD:BE:EF:00:00
+
+# Known WEP keys to decrypt, bssid,hexkey.  This is only for networks where
+# the keys are already known, and it may impact throughput on slower hardware.
+# Multiple wepkey lines may be used for multiple BSSIDs.
+# wepkey=00:DE:AD:C0:DE:00,FEEDFACEDEADBEEF01020304050607080900
 
 # User to setid to (should be your normal user)
 suiduser=your_user_here
