@@ -15,6 +15,10 @@ cases.  "kismet --help" will show the command line options available.
 
 "macfilter" (string) Comma-seperated list of MAC addresses to filter.
 
+"wepkey" (string) Comma-separated BSSID and WEP key (in hex) to decrypt.  This 
+                  is for runtime decryption of networks where the wep key is 
+                  known, and may impact the throughput on slower hardware.
+
 "tcpport" (int) Port to serve GUI data
 "allowedhosts" (string) Comma-seperated list of IP's allowed to connect.
 "maxclient" (int) Maximum number of simultaneously connected clients
